--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <a href="">Home</a>
+      <a href="">Contacts</a>
+      <a href="">Info</a>
+    </nav>
+  </header>
 
   <script src="./script.js"></script>
 </body>
