--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+  <!-- Header Section -->
   <header>
     <nav>
       <a href="">Home</a>
@@ -14,6 +16,72 @@
       <a href="">Info</a>
     </nav>
   </header>
+
+  <!-- Carousel Slider Section -->
+  <div class="carousel">
+    <div class="list">
+      <div class="item">
+        <img src="./images/img1.jpg" alt="">
+        <div class="content">
+          <div class="author">NEWTON</div>
+          <div class="title">DESIGN SLIDER</div>
+          <div class="topic">ANIMAL</div>
+          <div class="desc">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nobis optio et ut officiis quaerat impedit, repellat perspiciatis sequi, quos fugit neque molestiae, quidem similique eum culpa veritatis explicabo at.
+          </div>
+          <div class="buttons">
+            <button>SEE MORE</button>
+            <button>SUBSCRIBE</button>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./images/img2.jpg" alt="">
+        <div class="content">
+          <div class="author">NEWTON</div>
+          <div class="title">DESIGN SLIDER</div>
+          <div class="topic">ANIMAL</div>
+          <div class="desc">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nobis optio et ut officiis quaerat impedit, repellat perspiciatis sequi, quos fugit neque molestiae, quidem similique eum culpa veritatis explicabo at.
+          </div>
+          <div class="buttons">
+            <button>SEE MORE</button>
+            <button>SUBSCRIBE</button>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./images/img3.jpg" alt="">
+        <div class="content">
+          <div class="author">NEWTON</div>
+          <div class="title">DESIGN SLIDER</div>
+          <div class="topic">ANIMAL</div>
+          <div class="desc">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nobis optio et ut officiis quaerat impedit, repellat perspiciatis sequi, quos fugit neque molestiae, quidem similique eum culpa veritatis explicabo at.
+          </div>
+          <div class="buttons">
+            <button>SEE MORE</button>
+            <button>SUBSCRIBE</button>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./images/img4.jpg" alt="">
+        <div class="content">
+          <div class="author">NEWTON</div>
+          <div class="title">DESIGN SLIDER</div>
+          <div class="topic">ANIMAL</div>
+          <div class="desc">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nobis optio et ut officiis quaerat impedit, repellat perspiciatis sequi, quos fugit neque molestiae, quidem similique eum culpa veritatis explicabo at.
+          </div>
+          <div class="buttons">
+            <button>SEE MORE</button>
+            <button>SUBSCRIBE</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="./script.js"></script>
 </body>
