--- a/index.html
+++ b/index.html
@@ -81,6 +81,54 @@
         </div>
       </div>
     </div>
+
+    <!-- Thumbnail Section -->
+    <div class="thumbnail">
+      <div class="item">
+        <img src="./images/img1.jpg" alt="">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="des">
+            Description
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./images/img2.jpg" alt="">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="des">
+            Description
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./images/img3.jpg" alt="">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="des">
+            Description
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="./images/img4.jpg" alt="">
+        <div class="content">
+          <div class="title">
+            Name Slider
+          </div>
+          <div class="des">
+            Description
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="./script.js"></script>
