Create and Design List Thumbnail carousel slider

--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
         </div>
       </div>
     </div>
+
+    <!-- Arrows Section -->
+    <div class="arrows">
+      <button id="prev"><</button>
+      <button id="next">></button>
+    </div>
   </div>
 
   <script src="./script.js"></script>
