--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <!-- Carousel Slider Section -->
-  <div class="carousel">
+  <div class="carousel next">
     <div class="list">
       <div class="item">
         <img src="./images/img1.jpg" alt="">
