--- a/index.html
+++ b/index.html
@@ -1,142 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Slider Crazy Effects</title>
-  <link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="">Home</a>
+            <a href="">Contacts</a>
+            <a href="">Info</a>
+        </nav>
+    </header>
 
-  <!-- Header Section -->
-  <header>
-    <nav>
-      <a href="">Home</a>
-      <a href="">Contacts</a>
-      <a href="">Info</a>
-    </nav>
-  </header>
+    <!-- carousel -->
+    <div class="carousel">
+        <!-- list item -->
+        <div class="list">
+            <div class="item">
+                <img src="images/img1.jpg">
+                <div class="content">
+                    <div class="author">NEWTON</div>
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">ANIMAL</div>
+                    <div class="des">
+                        <!-- lorem 50 -->
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                    </div>
+                    <div class="buttons">
+                        <button>SEE MORE</button>
+                        <button>SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/img2.jpg">
+                <div class="content">
+                    <div class="author">NEWTON</div>
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">ANIMAL</div>
+                    <div class="des">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                    </div>
+                    <div class="buttons">
+                        <button>SEE MORE</button>
+                        <button>SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/img3.jpg">
+                <div class="content">
+                    <div class="author">NEWTON</div>
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">ANIMAL</div>
+                    <div class="des">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                    </div>
+                    <div class="buttons">
+                        <button>SEE MORE</button>
+                        <button>SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/img4.jpg">
+                <div class="content">
+                    <div class="author">NEWTON</div>
+                    <div class="title">DESIGN SLIDER</div>
+                    <div class="topic">ANIMAL</div>
+                    <div class="des">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
+                    </div>
+                    <div class="buttons">
+                        <button>SEE MORE</button>
+                        <button>SUBSCRIBE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- list thumnail -->
+        <div class="thumbnail">
+            <div class="item">
+                <img src="images/img1.jpg">
+                <div class="content">
+                    <div class="title">
+                        Name Slider
+                    </div>
+                    <div class="description">
+                        Description
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/img2.jpg">
+                <div class="content">
+                    <div class="title">
+                        Name Slider
+                    </div>
+                    <div class="description">
+                        Description
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/img3.jpg">
+                <div class="content">
+                    <div class="title">
+                        Name Slider
+                    </div>
+                    <div class="description">
+                        Description
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/img4.jpg">
+                <div class="content">
+                    <div class="title">
+                        Name Slider
+                    </div>
+                    <div class="description">
+                        Description
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- next prev -->
 
-  <!-- Carousel Slider Section -->
-  <div class="carousel next">
-    <div class="list">
-      <div class="item">
-        <img src="./images/img1.jpg" alt="">
-        <div class="content">
-          <div class="author">NEWTON</div>
-          <div class="title">DESIGN SLIDER</div>
-          <div class="topic">ANIMAL</div>
-          <div class="desc">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nobis optio et ut officiis quaerat impedit, repellat perspiciatis sequi, quos fugit neque molestiae, quidem similique eum culpa veritatis explicabo at.
-          </div>
-          <div class="buttons">
-            <button>SEE MORE</button>
-            <button>SUBSCRIBE</button>
-          </div>
+        <div class="arrows">
+            <button id="prev"><</button>
+            <button id="next">></button>
         </div>
-      </div>
-      <div class="item">
-        <img src="./images/img2.jpg" alt="">
-        <div class="content">
-          <div class="author">NEWTON</div>
-          <div class="title">DESIGN SLIDER</div>
-          <div class="topic">ANIMAL</div>
-          <div class="desc">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nobis optio et ut officiis quaerat impedit, repellat perspiciatis sequi, quos fugit neque molestiae, quidem similique eum culpa veritatis explicabo at.
-          </div>
-          <div class="buttons">
-            <button>SEE MORE</button>
-            <button>SUBSCRIBE</button>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <img src="./images/img3.jpg" alt="">
-        <div class="content">
-          <div class="author">NEWTON</div>
-          <div class="title">DESIGN SLIDER</div>
-          <div class="topic">ANIMAL</div>
-          <div class="desc">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nobis optio et ut officiis quaerat impedit, repellat perspiciatis sequi, quos fugit neque molestiae, quidem similique eum culpa veritatis explicabo at.
-          </div>
-          <div class="buttons">
-            <button>SEE MORE</button>
-            <button>SUBSCRIBE</button>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <img src="./images/img4.jpg" alt="">
-        <div class="content">
-          <div class="author">NEWTON</div>
-          <div class="title">DESIGN SLIDER</div>
-          <div class="topic">ANIMAL</div>
-          <div class="desc">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nobis optio et ut officiis quaerat impedit, repellat perspiciatis sequi, quos fugit neque molestiae, quidem similique eum culpa veritatis explicabo at.
-          </div>
-          <div class="buttons">
-            <button>SEE MORE</button>
-            <button>SUBSCRIBE</button>
-          </div>
-        </div>
-      </div>
+        <!-- time running -->
+        <div class="time"></div>
     </div>
 
-    <!-- Thumbnail Section -->
-    <div class="thumbnail">
-      <div class="item">
-        <img src="./images/img1.jpg" alt="">
-        <div class="content">
-          <div class="title">
-            Name Slider
-          </div>
-          <div class="des">
-            Description
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <img src="./images/img2.jpg" alt="">
-        <div class="content">
-          <div class="title">
-            Name Slider
-          </div>
-          <div class="des">
-            Description
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <img src="./images/img3.jpg" alt="">
-        <div class="content">
-          <div class="title">
-            Name Slider
-          </div>
-          <div class="des">
-            Description
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <img src="./images/img4.jpg" alt="">
-        <div class="content">
-          <div class="title">
-            Name Slider
-          </div>
-          <div class="des">
-            Description
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Arrows Section -->
-    <div class="arrows">
-      <button id="prev"><</button>
-      <button id="next">></button>
-    </div>
-  </div>
-
-  <script src="./script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
