--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <!-- Header Section -->
     <header>
         <nav>
             <a href="">Home</a>
