Updating the details of the first carousel

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <img src="images/img1.jpg">
                 <div class="content">
                     <div class="author">NEWTON</div>
-                    <div class="title">DESIGN SLIDER</div>
-                    <div class="topic">ANIMAL</div>
+                    <div class="title">PROGRAMMING</div>
+                    <div class="topic">CODES</div>
                     <div class="des">
                         <!-- lorem 50 -->
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut sequi, rem magnam nesciunt minima placeat, itaque eum neque officiis unde, eaque optio ratione aliquid assumenda facere ab et quasi ducimus aut doloribus non numquam. Explicabo, laboriosam nisi reprehenderit tempora at laborum natus unde. Ut, exercitationem eum aperiam illo illum laudantium?
